Fix bug:   can't use -dt <VALUE> to change dt   can't set stv to same as dt Others:   Change the starting point of neuron index of ras.txt from 0 to 1.   fix up some comments.   Increase the upper limit of simulation time from 1e10 to 1e99 ms.
Note:
  Needs full test.

--HG--
branch : IFsimu

--- a/changelog
+++ b/changelog
@@ -1,7 +1,12 @@
 更改日志
 
+2011-10-22 TO DO
+? 发现一个新 BUG, -dt 参数修改无效
+  BUG: --save-interval  不能设成与 -dt 相等
+
 2011-10-03
 发现 2011-09-06 的修改的 Bug: GUI 时参数的即时改变无效.
+tempneu2 也改成一次生成的了.
 
 2011-09-07
   解决 firing rate 超过 500次/s 的 Bug.
