see previous log.
--HG--
branch : IFsimu

--- a/changelog
+++ b/changelog
@@ -1,8 +1,8 @@
 更改日志
 
-2011-10-22 TO DO
-? 发现一个新 BUG, -dt 参数修改无效
-  BUG: --save-interval  不能设成与 -dt 相等
+2011-10-23
+  修正BUG:  -dt 参数修改无效
+           --save-interval  不能设成与 -dt 相等
 
 2011-10-03
 发现 2011-09-06 的修改的 Bug: GUI 时参数的即时改变无效.
