changed some echo text. check file as soon as it's opened changed the behavior of --pr-mul, --ps-mul, --psi-mul fix some new bring bug during r10, r11, r12
--HG--
branch : IFsimu

--- a/changelog
+++ b/changelog
@@ -1,17 +1,15 @@
 更改日志
 
-TODO: 完整的测试
-
-2011-10-28
-  添加功能别名: -stv VALUE (同--save-interval VALUE)
-
-2011-10-24
-  添加功能: 自定义 RC 低通滤波的系数: --RC-filter ci co
-
-2011-10-23
+2011-10-23 ~ 2011-11-02
+  进行了完整的命令行解析测试
   修正BUG:  -dt 参数修改无效
            --save-interval  不能设成与 -dt 相等
+           文件输出前检查是否可用
   更改:  放电时刻文件 ras.txt 的神经元编号改为从 1 开始.
+  更改行为: --pr-mul, --ps-mul, --psi-mul, 使用 a@b 之后的数默认是 c@(b+1)
+  添加功能: 自定义 RC 低通滤波的系数: --RC-filter ci co
+  添加功能(别名): -stv VALUE (同--save-interval VALUE)
+  添加命令行参数 "-vv", 用以输出调试信息.
 
 2011-10-03
 发现 2011-09-06 的修改的 Bug: GUI 时参数的即时改变无效.
