--- a/changelog
+++ b/changelog
@@ -1,5 +1,11 @@
 更改日志
 
+2011-11-23 (svn At revision 16)
+  修正BUG:  检查文件写入冲突的部分可能会造成文件内容损坏.
+  更正了一些注释.
+  减少一些唠叨模式的输出文字.
+  版本号增0.0.1
+
 2011-10-23 ~ 2011-11-02
   进行了完整的命令行解析测试
   修正BUG:  -dt 参数修改无效
