--- a/changelog
+++ b/changelog
@@ -1,5 +1,8 @@
 更改日志
 
+2011-12-02 (revision 17:18)
+  用时间平均平滑掉 dt 带来的 spike 时刻电压的离散性. 仅在使用RC滤波时起作用(--RC-filter).
+
 2011-11-23 (svn At revision 16)
   修正BUG:  检查文件写入冲突的部分可能会造成文件内容损坏.
   更正了一些注释.
