update version number to 2.0.13
--HG--
branch : IFsimu

--- a/changelog
+++ b/changelog
@@ -1,5 +1,8 @@
 更改日志
 
+2012-02-25
+  修正少许注释. 版本号更为 2.0.13
+
 2011-12-02 (revision 17:18)
   用时间平均平滑掉 dt 带来的 spike 时刻电压的离散性. 仅在使用RC滤波时起作用(--RC-filter).
 
